tests/ui/diagnostic-flags/terminal_urls.rs
// compile-flags: -Zterminal-urls=yes
fn main() {
    let () = 4; //~ ERROR
}
